Work on [GLib-1] #2